--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "evm-starter",
-  "version": "0.0.4",
-  "description": "This project can be use as a starting point for developing your SubQuery project",
+  "name": "moonriver-evm-starter-project",
+  "version": "1.0.0",
+  "description": "A basic Moonriver EVM example project with an event and call handler. Read more about this at https://doc.subquery.network/create/moonbeam/. This project can be use as a starting point for developing your SubQuery project",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b",
@@ -9,8 +9,8 @@
     "test": "jest",
     "codegen": "./node_modules/.bin/subql codegen"
   },
-  "homepage": "https://github.com/subquery/subql-starter",
-  "repository": "github:subquery/subql-starter",
+  "homepage": "https://github.com/subquery/tutorials-moonriver-evm-starter",
+  "repository": "github:subquery/tutorials-moonriver-evm-starter",
   "files": [
     "dist",
     "schema.graphql",
