--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@polkadot/api": "^6.6.1",
-    "@subql/cli": "^0.15.0",
-    "typescript": "^4.1.3"
+    "@subql/cli": "latest",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "@subql/contract-processors": "^0.3.0",
-    "@subql/types": "^0.10.0",
+    "@subql/types": "latest",
     "ethers": "^5.5.0"
   }
 }
