--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "moonriver-evm-starter-project",
+  "name": "frontier-evm-starter-project",
   "version": "1.0.0",
-  "description": "A basic Moonriver EVM example project with an event and call handler. Read more about this at https://doc.subquery.network/create/moonbeam/. This project can be use as a starting point for developing your SubQuery project",
+  "description": "A basic Frontier EVM example project with an event and call handler. Read more about this at https://doc.subquery.network/create/frontier/. This project can be use as a starting point for developing your SubQuery project",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -b",
@@ -9,8 +9,8 @@
     "test": "jest",
     "codegen": "./node_modules/.bin/subql codegen"
   },
-  "homepage": "https://github.com/subquery/tutorials-moonriver-evm-starter",
-  "repository": "github:subquery/tutorials-moonriver-evm-starter",
+  "homepage": "https://github.com/subquery/tutorials-frontier-evm-starter",
+  "repository": "github:subquery/tutorials-frontier-evm-starter",
   "files": [
     "dist",
     "schema.graphql",
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@polkadot/api": "7.8.1",
     "@subql/cli": "^0.16.2",
-    "@subql/contract-processors": "file:.yalc/@subql/contract-processors",
+    "@subql/contract-processors": "0.5.3",
     "@subql/types": "^0.14.0",
     "typescript": "^4.4.4"
   }
