--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   "author": "Ian He & Jay Ji",
   "license": "Apache-2.0",
   "resolutions": {
-    "@polkadot/api": "7.8.1",
-    "@polkadot/types": "7.8.1",
-    "@polkadot/util": "8.4.1"
+    "@polkadot/api": "^6.11.1",
+    "@polkadot/types": "^7.8.1",
+    "@polkadot/util": "^8.4.1"
   },
   "dependencies": {
     "moonbeam-types-bundle": "^2.0.3"
   },
   "devDependencies": {
-    "@polkadot/api": "7.8.1",
+    "@polkadot/api": "^7.12.1",
     "@subql/cli": "^0.16.2",
     "@subql/contract-processors": "0.5.3",
     "@subql/types": "^0.14.0",
