--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
   "author": "Ian He & Jay Ji",
   "license": "Apache-2.0",
   "resolutions": {
-    "@polkadot/api": "^7.12.1",
-    "@polkadot/types": "^7.12.1",
-    "@polkadot/util": "8.4.1"
+    "@polkadot/api": "8.3.1",
+    "@polkadot/types": "8.3.1",
+    "@polkadot/util": "9.1.1",
+    "ipfs-unixfs": "6.0.6"
   },
   "dependencies": {
-    "moonbeam-types-bundle": "^2.0.3"
+    "moonbeam-types-bundle": "^2.0.4"
   },
   "devDependencies": {
-    "@polkadot/api": "^7",
-    "@subql/cli": "^0.16.2",
-    "@subql/contract-processors": "0.5.3",
-    "@subql/types": "^0.14.0",
+    "@polkadot/api": "^8",
+    "@subql/cli": "latest",
+    "@subql/contract-processors": "0.6.0",
+    "@subql/types": "^0.15.0",
     "typescript": "^4.6.2"
   }
 }
