--- a/project.yaml
+++ b/project.yaml
@@ -10,7 +10,7 @@ runner:
     version: '>=0.16.0'
 description: >-
   A basic Frontier EVM example project with an event and call handler. Read more
-  about this at https://doc.subquery.network/create/frontier/
+  about this at https://university.subquery.network/build/substrate-evm.html
 repository: https://github.com/subquery/tutorials-frontier-evm-starter
 schema:
   file: ./schema.graphql
