--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ipfs-unixfs": "6.0.6"
   },
   "dependencies": {
+    "@subql/frontier-evm-processor": "^0.0.1-0",
     "moonbeam-types-bundle": "^2.0.4"
   },
   "devDependencies": {
