--- a/project.yaml
+++ b/project.yaml
@@ -51,4 +51,4 @@ dataSources:
           filter:
             function: approve(address to,uint256 value)
             ## The transaction sender
-            from: "0x6bd193ee6d2104f14f94e2ca6efefae561a4334b"
+            from: "0x6bd193ee6d2104f14f94e2ca6efefae561a4334b" # Solarbeams token contract
